Issue #378 Update all activities to use TvRecylcerView
Refactored the code to handle the tvrecylcer view and made
the selected and click handler classes more generic.

--- a/serenity-app/src/main/res/layout-large/activity_tvbrowser_show_banners.xml
+++ b/serenity-app/src/main/res/layout-large/activity_tvbrowser_show_banners.xml
@@ -126,20 +126,18 @@
         android:orientation="vertical"
         >
 
-      <net.ganin.darv.DpadAwareRecyclerView
+      <us.nineworlds.serenity.widgets.SerenityTVRecylcerView
           android:id="@+id/tvShowBannerGallery"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:layout_gravity="center|center_vertical"
           android:nextFocusUp="@+id/categoryFilter"
-          app:selectorVelocity="2000"
-          app:smoothScrolling="true"
-          app:foregroundSelector="@drawable/item_foreground_selector"
-          android:descendantFocusability="afterDescendants"
+          app:isAutoProcessFocus="true"
+          app:focusDrawable="@drawable/rounded_transparent_border"
           >
 
         <requestFocus/>
-      </net.ganin.darv.DpadAwareRecyclerView>
+      </us.nineworlds.serenity.widgets.SerenityTVRecylcerView>
 
     </LinearLayout>
   </RelativeLayout>
