--- a/serenity-app/src/main/res/layout-large/activity_tvbrowser_show_gridview_posters.xml
+++ b/serenity-app/src/main/res/layout-large/activity_tvbrowser_show_gridview_posters.xml
@@ -19,29 +19,28 @@
         android:layout_height="match_parent"
         />
 
-    <FrameLayout android:layout_width="match_parent"
+    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginBottom="5dp"
         android:layout_marginRight="10dp"
         android:layout_marginTop="@dimen/actionbarMargin"
-        android:layout_marginBottom="5dp"
-        xmlns:android="http://schemas.android.com/apk/res/android"
         >
 
-      <net.ganin.darv.DpadAwareRecyclerView android:id="@+id/tvShowGridView"
+      <us.nineworlds.serenity.widgets.SerenityTVRecylcerView
+          android:id="@+id/tvShowGridView"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
-          app:selectorVelocity="1000"
-          app:smoothScrolling="true"
+          android:layout_marginBottom="5dp"
           android:background="@color/card_background"
           android:visibility="visible"
-          android:layout_marginBottom="5dp"
-          app:foregroundSelector="@drawable/item_foreground_selector"
-          xmlns:app="http://schemas.android.com/apk/res/us.nineworlds.serenity"
-          android:descendantFocusability="afterDescendants"
+          app:focusDrawable="@drawable/rounded_transparent_border"
+          app:isAutoProcessFocus="true"
           >
 
         <requestFocus/>
-      </net.ganin.darv.DpadAwareRecyclerView>
+      </us.nineworlds.serenity.widgets.SerenityTVRecylcerView>
     </FrameLayout>
   </RelativeLayout>
 
