--- a/serenity-app/src/main/res/layout-large/activity_tvbrowser_show_seasons.xml
+++ b/serenity-app/src/main/res/layout-large/activity_tvbrowser_show_seasons.xml
@@ -1,5 +1,6 @@
 <us.nineworlds.serenity.widgets.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -71,20 +72,18 @@
         android:orientation="vertical"
         >
 
-      <net.ganin.darv.DpadAwareRecyclerView
+      <us.nineworlds.serenity.widgets.SerenityTVRecylcerView
           android:id="@+id/tvShowSeasonImageGallery"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:layout_gravity="center|center_vertical"
           android:padding="5dp"
-          app:selectorVelocity="2000"
-          app:smoothScrolling="true"
-          app:foregroundSelector="@drawable/item_foreground_selector"
-          android:descendantFocusability="afterDescendants"
+          app:isAutoProcessFocus="true"
+          app:focusDrawable="@drawable/rounded_transparent_border"
           >
 
         <requestFocus/>
-      </net.ganin.darv.DpadAwareRecyclerView>
+      </us.nineworlds.serenity.widgets.SerenityTVRecylcerView>
     </LinearLayout>
   </RelativeLayout>
 
