--- a/serenity-app/src/main/res/layout-large/video_gallery_fragment.xml
+++ b/serenity-app/src/main/res/layout-large/video_gallery_fragment.xml
@@ -114,9 +114,8 @@
         android:layout_gravity="center|center_vertical"
         android:nextFocusUp="@+id/categoryFilter"
         app:isAutoProcessFocus="true"
-        app:focusDrawable="@drawable/rounded_transparent_border"
-        >
-
+        app:focusScale="1.10"
+        app:focusDrawable="@drawable/rounded_transparent_border">
       <requestFocus/>
     </us.nineworlds.serenity.widgets.SerenityTVRecylcerView>
 
