--- a/serenity-app/src/main/res/layout-large/activity_tvbrowser_show_seasons.xml
+++ b/serenity-app/src/main/res/layout-large/activity_tvbrowser_show_seasons.xml
@@ -3,8 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    >
+    android:layout_height="match_parent">
 
   <!-- The main content view -->
 
@@ -20,65 +19,71 @@
         android:layout_height="match_parent"
         />
 
-    <us.nineworlds.serenity.widgets.SerenityTVRecylcerView
-        android:id="@+id/episodeGridView"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/tvShowSeasonTitleRow"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="4dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginTop="@dimen/actionbarMargin"
-        android:background="@color/card_background"
-        android:focusable="true"
-        android:nextFocusDown="@+id/tvShowSeasonImageGalleryLayout"
-        android:nextFocusLeft="@+id/tvShowSeasonImageGalleryLayout"
-        android:nextFocusRight="@+id/tvShowSeasonImageGalleryLayout"
-        android:visibility="gone"
-        app:isAutoProcessFocus="true"
-        app:focusDrawable="@drawable/rounded_transparent_border"
-        />
-
-    <LinearLayout
-        android:id="@+id/tvShowSeasonTitleRow"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/tvShowSeasonImageGalleryLayout"
-        android:background="@color/card_background"
-        android:orientation="horizontal"
-        >
-
-      <TextView
-          android:id="@+id/tvShowSeasonsTitle"
-          style="@android:style/TextAppearance.Holo.Medium"
-          android:layout_width="fill_parent"
-          android:layout_height="wrap_content"
-          android:gravity="center"
-          android:textColor="#F0F0F0"
-          tools:ignore="SelectableText"
-          />
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/tvShowSeasonImageGalleryLayout"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="5dp"
-        android:background="@color/card_background"
-        android:orientation="vertical"
-        >
+        android:paddingStart="@dimen/overscan_start_padding"
+        android:paddingEnd="@dimen/overscan_end_padding">
 
       <us.nineworlds.serenity.widgets.SerenityTVRecylcerView
-          android:id="@+id/tvShowSeasonImageGallery"
+          android:id="@+id/episodeGridView"
+          android:layout_width="match_parent"
+          android:layout_height="match_parent"
+          android:layout_above="@+id/tvShowSeasonTitleRow"
+          android:layout_centerHorizontal="true"
+          android:layout_marginBottom="4dp"
+          android:layout_marginRight="10dp"
+          android:layout_marginTop="@dimen/actionbarMargin"
+          android:background="@color/card_background"
+          android:focusable="true"
+          android:nextFocusDown="@+id/tvShowSeasonImageGalleryLayout"
+          android:nextFocusLeft="@+id/tvShowSeasonImageGalleryLayout"
+          android:nextFocusRight="@+id/tvShowSeasonImageGalleryLayout"
+          android:visibility="gone"
+          app:isAutoProcessFocus="true"
+          app:focusDrawable="@drawable/rounded_transparent_border"/>
+
+      <LinearLayout
+          android:id="@+id/tvShowSeasonTitleRow"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:layout_above="@+id/tvShowSeasonImageGalleryLayout"
+          android:background="@color/card_background"
+          android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/tvShowSeasonsTitle"
+            style="@android:style/TextAppearance.Holo.Medium"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:textColor="#F0F0F0"
+            tools:ignore="SelectableText"
+            />
+      </LinearLayout>
+
+      <LinearLayout
+          android:id="@+id/tvShowSeasonImageGalleryLayout"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
-          android:layout_gravity="center|center_vertical"
+          android:layout_alignParentBottom="true"
+          android:layout_marginBottom="5dp"
           android:padding="5dp"
-          app:isAutoProcessFocus="true"
-          app:focusDrawable="@drawable/rounded_transparent_border"
-          />
-    </LinearLayout>
+          android:background="@color/card_background"
+          android:orientation="vertical">
+
+        <us.nineworlds.serenity.widgets.SerenityTVRecylcerView
+            android:id="@+id/tvShowSeasonImageGallery"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center|center_vertical"
+            android:padding="5dp"
+            app:isAutoProcessFocus="true"
+            app:focusDrawable="@drawable/rounded_transparent_border"/>
+      </LinearLayout>
+
+    </RelativeLayout>
+
   </RelativeLayout>
 
   <include layout="@layout/menu_drawer_with_navigation"/>
