--- a/serenity-app/src/main/res/layout-large/menu_drawer_with_navigation.xml
+++ b/serenity-app/src/main/res/layout-large/menu_drawer_with_navigation.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/left_drawer"
-    android:layout_width="240dp"
+    android:layout_width="340dp"
     android:layout_height="fill_parent"
     android:layout_gravity="start"
     android:layout_marginTop="?android:attr/actionBarSize"
-    android:background="#111"
+    android:background="@android:color/background_dark"
     android:orientation="vertical"
+    android:paddingStart="@dimen/overscan_start_padding"
     >
 
   <ListView
