--- a/serenity-app/src/main/res/values/dimens.xml
+++ b/serenity-app/src/main/res/values/dimens.xml
@@ -5,4 +5,10 @@
   <dimen name="horizontal_spacing">15dp</dimen>
   <dimen name="grid_spacing_dimen">5dp</dimen>
   <dimen name="selector_border_radius">6dp</dimen>
+
+  <!-- Overscan Compensation -->
+  <dimen name="overscan_top_padding">10dp</dimen>
+  <dimen name="overscan_start_padding">30dp</dimen>
+  <dimen name="overscan_end_padding">30dp</dimen>
+  <dimen name="overscan_bottom_padding">15dp</dimen>
 </resources>
