--- a/serenity-app/src/main/res/layout-large/activity_episode_browser.xml
+++ b/serenity-app/src/main/res/layout-large/activity_episode_browser.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <us.nineworlds.serenity.widgets.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/drawer_layout"
+    android:background="@android:color/background_dark"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     >
@@ -9,25 +10,31 @@
 
   <RelativeLayout
       android:id="@+id/movieBrowserBackgroundLayout"
-      android:layout_width="fill_parent"
-      android:layout_height="fill_parent"
-      >
+      android:layout_width="match_parent"
+      android:layout_height="match_parent">
 
     <ImageView
         android:id="@+id/fanArt"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        />
+        android:layout_height="match_parent"/>
 
-    <fragment
-        android:id="@+id/galleryFragmentContainer"
-        android:name="us.nineworlds.serenity.fragments.EpisodeVideoGalleryFragment"
-        android:layout_marginTop="@dimen/actionbarMargin"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:tag="videoGallery_fragment"
-        android:layout_alignParentBottom="true"
-        />
+        android:layout_height="match_parent"
+        android:paddingStart="@dimen/overscan_start_padding"
+        android:paddingEnd="@dimen/overscan_end_padding"
+        android:paddingBottom="@dimen/overscan_bottom_padding"
+        android:layout_alignParentBottom="true">
+
+      <fragment
+          android:id="@+id/galleryFragmentContainer"
+          android:name="us.nineworlds.serenity.fragments.EpisodeVideoGalleryFragment"
+          android:layout_marginTop="@dimen/actionbarMargin"
+          android:layout_width="match_parent"
+          android:layout_height="match_parent"
+          android:tag="videoGallery_fragment"/>
+
+    </FrameLayout>
 
   </RelativeLayout>
 
