--- a/serenity-app/src/main/res/layout-large/activity_movie_browser.xml
+++ b/serenity-app/src/main/res/layout-large/activity_movie_browser.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <us.nineworlds.serenity.widgets.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/drawer_layout"
+    android:background="@android:color/background_dark"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     >
@@ -23,6 +24,9 @@
         android:id="@+id/fragment_container"
         android:layout_width="match_parent"
         android:layout_marginTop="@dimen/actionbarMargin"
+        android:paddingStart="@dimen/overscan_start_padding"
+        android:paddingEnd="@dimen/overscan_start_padding"
+        android:paddingBottom="@dimen/overscan_bottom_padding"
         android:layout_alignParentBottom="true"
         android:layout_height="match_parent"
         />
