--- a/serenity-app/src/main/res/layout-large/activity_tvbrowser_show_banners.xml
+++ b/serenity-app/src/main/res/layout-large/activity_tvbrowser_show_banners.xml
@@ -1,6 +1,7 @@
 <us.nineworlds.serenity.widgets.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawer_layout"
+    android:background="@android:color/background_dark"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -17,23 +18,33 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
-    <include layout="@layout/include_tvshow_detail"/>
-
-    <FrameLayout
-        android:id="@+id/tvhsow_container"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="15dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginTop="5dp"
-        android:background="@color/card_background"
-        android:gravity="bottom">
+        android:layout_height="match_parent"
+        android:paddingStart="@dimen/overscan_start_padding"
+        android:paddingEnd="@dimen/overscan_end_padding"
+        android:paddingBottom="@dimen/overscan_bottom_padding">
 
-      <include layout="@layout/include_tvshow_recyclerview"/>
+      <include layout="@layout/include_tvshow_detail"/>
 
-    </FrameLayout>
+      <FrameLayout
+          android:id="@+id/tvhsow_container"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:layout_alignParentBottom="true"
+          android:layout_marginBottom="15dp"
+          android:layout_marginLeft="10dp"
+          android:layout_marginRight="10dp"
+          android:layout_marginTop="5dp"
+          android:padding="5dp"
+          android:background="@color/card_background"
+          android:gravity="bottom">
+
+        <include layout="@layout/include_tvshow_recyclerview"/>
+
+      </FrameLayout>
+    </RelativeLayout>
+
   </RelativeLayout>
 
   <!-- The navigation drawer -->
