--- a/serenity-app/src/main/res/layout-large/activity_tvbrowser_show_gridview_posters.xml
+++ b/serenity-app/src/main/res/layout-large/activity_tvbrowser_show_gridview_posters.xml
@@ -1,5 +1,6 @@
 <us.nineworlds.serenity.widgets.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/drawer_layout"
+    android:background="@android:color/background_dark"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -19,8 +20,9 @@
     <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingBottom="10dp"
-        android:paddingStart="10dp"
+        android:paddingBottom="@dimen/overscan_bottom_padding"
+        android:paddingStart="@dimen/overscan_start_padding"
+        android:paddingEnd="@dimen/overscan_end_padding"
         android:paddingTop="@dimen/actionbarMargin"
         android:background="@color/card_background">
 
