--- a/serenity-app/src/main/res/layout-large/activity_tvbrowser_show_posters.xml
+++ b/serenity-app/src/main/res/layout-large/activity_tvbrowser_show_posters.xml
@@ -1,9 +1,9 @@
 <us.nineworlds.serenity.widgets.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/drawer_layout"
+    android:background="@android:color/background_dark"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    >
+    android:layout_height="match_parent">
 
   <!-- The main content view -->
 
@@ -18,22 +18,32 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
-    <include layout="@layout/include_tvshow_detail"/>
-
-    <FrameLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="5dp"
-        android:layout_marginStart="10dip"
-        android:layout_marginEnd="10dp"
-        android:layout_marginTop="5dip"
-        android:background="#A0000000"
-        android:gravity="bottom">
+        android:layout_height="match_parent"
+        android:paddingStart="@dimen/overscan_start_padding"
+        android:paddingEnd="@dimen/overscan_end_padding"
+        android:paddingBottom="@dimen/overscan_bottom_padding">
 
-      <include layout="@layout/include_tvshow_recyclerview"/>
+      <include layout="@layout/include_tvshow_detail"/>
 
-    </FrameLayout>
+      <FrameLayout
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:layout_alignParentBottom="true"
+          android:layout_marginBottom="5dp"
+          android:layout_marginStart="10dip"
+          android:layout_marginEnd="10dp"
+          android:layout_marginTop="5dip"
+          android:background="#A0000000"
+          android:gravity="bottom">
+
+        <include layout="@layout/include_tvshow_recyclerview"/>
+
+      </FrameLayout>
+
+    </RelativeLayout>
+
   </RelativeLayout>
 
   <include layout="@layout/menu_drawer_with_navigation"/>
