--- a/serenity-app/src/main/res/layout-large/include_tvshow_detail.xml
+++ b/serenity-app/src/main/res/layout-large/include_tvshow_detail.xml
@@ -7,6 +7,8 @@
     android:layout_height="wrap_content"
     android:layout_centerHorizontal="true"
     android:layout_marginTop="@dimen/actionbarMargin"
+    android:layout_marginStart="10dp"
+    android:layout_marginEnd="10dp"
     android:background="@color/card_background"
     android:padding="5dp">
 
