--- a/serenity-app/src/main/res/layout-large/include_tvshow_recyclerview.xml
+++ b/serenity-app/src/main/res/layout-large/include_tvshow_recyclerview.xml
@@ -6,6 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center|center_vertical"
+    android:layout_marginStart="10dp"
+    android:layout_marginEnd="10dp"
     android:nextFocusUp="@+id/categoryFilter"
     android:visibility="gone"
     app:focusDrawable="@drawable/rounded_transparent_border"
