--- a/serenity-app/src/main/res/layout-large/tvshow_custom_actionbar.xml
+++ b/serenity-app/src/main/res/layout-large/tvshow_custom_actionbar.xml
@@ -4,8 +4,9 @@
     android:id="@+id/tvLine1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal"
-    >
+    android:paddingTop="@dimen/overscan_top_padding"
+    android:paddingEnd="@dimen/overscan_end_padding"
+    android:orientation="horizontal">
 
   <TextView
       android:id="@+id/tvshow_CategoryName"
@@ -15,8 +16,7 @@
       android:layout_marginLeft="10dp"
       android:gravity="center_vertical|left"
       android:focusable="false"
-      android:text="@string/category"
-      />
+      android:text="@string/category"/>
 
   <Spinner
       android:id="@+id/categoryFilter"
@@ -60,7 +60,6 @@
       android:gravity="center_vertical|right"
       android:textColor="#F0F0F0"
       android:textSize="20sp"
-      tools:ignore="SelectableText"
-      ></TextView>
+      tools:ignore="SelectableText"/>
 
 </LinearLayout>
