--- a/serenity-app/src/main/res/layout-large/include_tvshow_recyclerview.xml
+++ b/serenity-app/src/main/res/layout-large/include_tvshow_recyclerview.xml
@@ -11,6 +11,7 @@
     android:nextFocusUp="@+id/categoryFilter"
     android:visibility="gone"
     app:focusDrawable="@drawable/rounded_transparent_border"
+    app:focusScale="@dimen/focus_size_value"
     app:isAutoProcessFocus="true">
 
   <requestFocus/>
