--- a/serenity-app/src/main/res/layout-large/video_grid_fragment.xml
+++ b/serenity-app/src/main/res/layout-large/video_grid_fragment.xml
@@ -14,6 +14,7 @@
       android:visibility="visible"
       android:layout_marginBottom="5dp"
       app:isAutoProcessFocus="true"
+      app:focusScale="@dimen/focus_size_value"
       app:focusDrawable="@drawable/rounded_transparent_border"/>
 
 </FrameLayout>
