--- a/serenity-app/src/main/res/layout/activity_exoplayer_video.xml
+++ b/serenity-app/src/main/res/layout/activity_exoplayer_video.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -16,7 +17,10 @@
     <com.google.android.exoplayer2.ui.SimpleExoPlayerView
         android:id="@+id/player_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        app:rewind_increment="300000"
+        app:fastforward_increment="300000"
+        />
 
   </FrameLayout>
 
