--- a/serenity-app/src/main/res/xml/preferences.xml
+++ b/serenity-app/src/main/res/xml/preferences.xml
@@ -1,23 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
+<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
+    android:title="Serenity Settings">
 
   <PreferenceCategory android:title="@string/server_settings">
+<!--
     <ListPreference
         android:defaultValue=""
         android:key="discoveredServer"
         android:summary="@string/server_settings_summary"
         android:title="@string/discovered_servers_"/>
+-->
 
     <EditTextPreference
         android:defaultValue=""
         android:key="server"
         android:summary="@string/preferred_ipaddress_summary"
         android:title="@string/preferred_server_address"/>
+
     <EditTextPreference
         android:defaultValue="32400"
         android:key="serverport"
         android:summary="@string/default_port_summary"
         android:title="@string/server_port"/>
+
   </PreferenceCategory>
   <PreferenceCategory android:title="@string/preferred_filter">
     <ListPreference
@@ -45,24 +50,26 @@
         android:key="overscan_setup"
         android:title="@string/overscan_setup_title"/>
   </PreferenceCategory>
+
   <PreferenceCategory android:title="@string/android_tv_recommendations">
     <CheckBoxPreference
         android:key="androidtv_recommendation_ondeck"
         android:summary="@string/contribute_ondeck_movies_and_episodes"
         android:title="@string/androidtv_ondeck_recommendations"
-        android:defaultValue="true"/>
+        android:defaultValue="false"/>
   </PreferenceCategory>
+
   <PreferenceCategory android:title="@string/video_library">
+    <!--  Reneable when Subtitle support is added back.
     <CheckBoxPreference
         android:key="automatic_subtitle_selection"
         android:summary="@string/subtitle_automatic_selection_summary"
         android:title="@string/automatically_select_subtitles_"/>
-
     <ListPreference
         android:key="preferred_subtitle_language"
         android:summary="@string/subtitle_language_selection_summary"
         android:title="@string/subtitle_language_preference"/>
-
+-->
     <CheckBoxPreference
         android:key="series_layout_posters"
         android:summary="@string/prefer_poster_layout_for_series_"
@@ -75,11 +82,13 @@
         android:key="movie_layout_grid"
         android:summary="@string/poster_grid_layout_for_movies_"
         android:title="@string/movie_grid_poster_layout"/>
+    <!--
     <CheckBoxPreference
         android:key="episode_trailers"
         android:title="Enable Episode Previews"
         android:summary="When enabled the app will try and search YouTube for episode promos and previews. Disable if you are not finding relevant trailers from YouTube."
         android:defaultValue="false"/>
+     -->
   </PreferenceCategory>
   <PreferenceCategory android:title="@string/animations">
     <CheckBoxPreference
@@ -87,21 +96,25 @@
         android:key="animation_background_mainmenu_fadein"
         android:summary="@string/fade_in_the_main_menu_background_art_"
         android:title="@string/fade_in_main_menu_backround"/>
+    <!--
     <CheckBoxPreference
         android:key="animation_background_fadein"
         android:summary="@string/movie_fadein_animation_summary"
         android:title="@string/fade_in_background_fan_art"/>
+     -->
   </PreferenceCategory>
   <PreferenceCategory android:title="@string/media_player_internal">
     <CheckBoxPreference
         android:key="plex_aspect_ratio"
         android:summary="@string/prefer_plex_media_server_s_aspect_ratio_"
         android:title="@string/plex_aspect_ratio"/>
+<!--
     <CheckBoxPreference
         android:defaultValue="true"
         android:key="internal_player_osd"
         android:summary="@string/internal_player_osd_summary"
         android:title="@string/on_screen_display"/>
+-->
     <ListPreference
         android:defaultValue="5000"
         android:key="osd_display_time"
@@ -127,7 +140,9 @@
         android:title="@string/preferred_external_player"/>
 
   </PreferenceCategory>
+<!--
   <PreferenceCategory android:title="@string/Controls">
+
     <ListPreference
         android:key="skip_forward_time"
         android:title="@string/skip_forward_time_title"
@@ -151,6 +166,7 @@
         android:defaultValue="queue"/>
 
   </PreferenceCategory>
+  -->
   <PreferenceCategory android:title="@string/preference_remote_control">
     <CheckBoxPreference
         android:defaultValue="true"
