--- a/serenity-app/src/main/res/layout-large/include_tvshow_recyclerview.xml
+++ b/serenity-app/src/main/res/layout-large/include_tvshow_recyclerview.xml
@@ -1,18 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<us.nineworlds.serenity.widgets.SerenityTVRecylcerView
+<android.support.v7.widget.RecyclerView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/tvShowRecyclerView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center|center_vertical"
     android:layout_marginStart="10dp"
     android:layout_marginEnd="10dp"
+    android:focusable="true"
+    android:descendantFocusability="afterDescendants"
     android:nextFocusUp="@+id/categoryFilter"
-    android:visibility="gone"
-    app:focusDrawable="@drawable/rounded_transparent_border"
-    app:focusScale="@dimen/focus_size_value"
-    app:isAutoProcessFocus="true">
+    android:visibility="gone">
 
   <requestFocus/>
-</us.nineworlds.serenity.widgets.SerenityTVRecylcerView>
+</android.support.v7.widget.RecyclerView>
