--- a/serenity-app/src/main/res/layout-large/include_tvshow_recyclerview.xml
+++ b/serenity-app/src/main/res/layout-large/include_tvshow_recyclerview.xml
@@ -10,7 +10,9 @@
     android:focusable="true"
     android:descendantFocusability="afterDescendants"
     android:nextFocusUp="@+id/categoryFilter"
-    android:visibility="gone">
+    android:visibility="gone"
+    android:clipToPadding="false"
+    android:clipChildren="false">
 
   <requestFocus/>
 </android.support.v7.widget.RecyclerView>
