--- a/serenity-app/src/main/res/anim/anim_scale_big.xml
+++ b/serenity-app/src/main/res/anim/anim_scale_big.xml
@@ -1,4 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<set xmlns:android="http://schemas.android.com/apk/res/android">
-
+<set xmlns:android="http://schemas.android.com/apk/res/android"
+    android:fillAfter="true"
+    android:shareInterpolator="false">
+  <scale
+      android:duration="150"
+      android:fromXScale="1.0"
+      android:fromYScale="1.0"
+      android:interpolator="@android:anim/accelerate_decelerate_interpolator"
+      android:pivotX="50.0%"
+      android:pivotY="50.0%"
+      android:repeatCount="0"
+      android:toXScale="1.10"
+      android:toYScale="1.10" />
 </set>
