--- a/serenity-app/src/main/res/layout-large/activity_tvbrowser_show_posters.xml
+++ b/serenity-app/src/main/res/layout-large/activity_tvbrowser_show_posters.xml
@@ -11,7 +11,9 @@
       android:id="@+id/tvshowBrowserLayout"
       android:layout_width="fill_parent"
       android:layout_height="match_parent"
-      android:background="@drawable/tvshows">
+      android:background="@drawable/tvshows"
+      android:clipChildren="false"
+      android:clipToPadding="false">
 
     <ImageView
         android:id="@+id/fanArt"
@@ -23,7 +25,9 @@
         android:layout_height="match_parent"
         android:paddingStart="@dimen/overscan_start_padding"
         android:paddingEnd="@dimen/overscan_end_padding"
-        android:paddingBottom="@dimen/overscan_bottom_padding">
+        android:paddingBottom="@dimen/overscan_bottom_padding"
+        android:clipChildren="false"
+        android:clipToPadding="false">
 
       <include layout="@layout/include_tvshow_detail"/>
 
@@ -36,7 +40,9 @@
           android:layout_marginEnd="10dp"
           android:layout_marginTop="5dip"
           android:background="#A0000000"
-          android:gravity="bottom">
+          android:gravity="bottom"
+          android:clipChildren="false"
+          android:clipToPadding="false">
 
         <include layout="@layout/include_tvshow_recyclerview"/>
 
