Issue #389 Added loading indicators to the screens that can take a while to populate

--- a/serenity-app/src/main/res/layout-large/activity_episode_browser.xml
+++ b/serenity-app/src/main/res/layout-large/activity_episode_browser.xml
@@ -18,6 +18,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
+    <include layout="@layout/include_loading_progress"
+      android:layout_width="150dp"
+      android:layout_height="150dp"
+      android:layout_centerInParent="true"/>
+
+
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
