--- a/serenity-app/src/main/res/layout-large/activity_login_user.xml
+++ b/serenity-app/src/main/res/layout-large/activity_login_user.xml
@@ -6,6 +6,11 @@
     android:layout_height="match_parent"
     android:background="@android:color/background_dark">
 
+  <include layout="@layout/include_loading_progress"
+    android:layout_width="150dp"
+    android:layout_height="150dp"
+    android:layout_centerInParent="true"/>
+
   <TextView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
@@ -22,6 +27,7 @@
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_centerInParent="true"
+      android:visibility="gone"
       app:isAutoProcessFocus="true"
       app:focusDrawable="@drawable/rounded_transparent_border"
       tools:itemCount="3"
