--- a/serenity-app/src/main/res/layout-large/activity_server_selection.xml
+++ b/serenity-app/src/main/res/layout-large/activity_server_selection.xml
@@ -17,12 +17,10 @@
       android:focusable="false"
       />
 
-  <ProgressBar
-      android:id="@+id/server_loading_progress"
-      android:theme="@style/Theme.Leanback"
-      android:layout_width="100dp"
-      android:layout_height="100dp"
-      android:layout_centerInParent="true"/>
+  <include layout="@layout/include_loading_progress"
+    android:layout_width="150dp"
+    android:layout_height="150dp"
+    android:layout_centerInParent="true"/>
 
   <LinearLayout
       android:orientation="vertical"
