--- a/serenity-app/src/main/res/layout-large/activity_tvbrowser_show_seasons.xml
+++ b/serenity-app/src/main/res/layout-large/activity_tvbrowser_show_seasons.xml
@@ -22,6 +22,11 @@
         android:layout_height="match_parent"
         />
 
+    <include layout="@layout/include_loading_progress"
+      android:layout_width="150dp"
+      android:layout_height="150dp"
+      android:layout_centerInParent="true"/>
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
