--- a/serenity-app/src/main/res/layout-large/video_gallery_fragment.xml
+++ b/serenity-app/src/main/res/layout-large/video_gallery_fragment.xml
@@ -7,7 +7,13 @@
     android:layout_height="match_parent"
     android:clipChildren="false"
     android:clipToPadding="false"
+    android:background="@android:color/background_dark"
     >
+
+  <include layout="@layout/include_loading_progress"
+    android:layout_width="150dp"
+    android:layout_height="150dp"
+    android:layout_centerInParent="true"/>
 
   <RelativeLayout
       android:id="@+id/video_details_container"
